--- a/scss/partials/nav.scss
+++ b/scss/partials/nav.scss
@@ -18,7 +18,7 @@ body {
   margin: 0;
   padding-top: 700px;
   @media screen and (max-width: $break-small) {
-    padding-top: 640px;
+    padding-top: 0px;
   }
   @media screen and (min-width: $break-large) {
     padding-top: 840px;
