--- a/scss/partials/typography.scss
+++ b/scss/partials/typography.scss
@@ -32,6 +32,12 @@ h1,h2,h3,h4,h5,h6 {
 h1 {
 	padding: 12px 0 0;
 	font-size: 4em;
+	@media screen and (max-width: $break-small) {
+    font-size: 3em;
+ 	}
+  	@media screen and (min-width: $break-large) {
+   	font-size: 5em;
+  	}
 }
 
 .students h1 {
@@ -80,6 +86,18 @@ p.lede {
   	}
 }
 
+p.info {
+	font-size: 1.3em;
+	text-align: center;
+	color:white;
+	@media screen and (max-width: $break-small) {
+    font-size: 1em;
+ 	}
+  	@media screen and (min-width: $break-large) {
+   	font-size: 1.3em;
+  	}
+}
+
 p.intro {
 	font-size: 1.3em;
 	text-align: center;
@@ -110,6 +128,17 @@ p.closing {
   	}
 }
 
+p.category {
+	color: #fdc20e;
+	font-size: 1.6em;
+	font-weight: 700;
+	text-align: center;
+	margin-bottom: 0;
+	@media screen and (max-width: $break-small) {
+    font-size: 1.1em;
+ 	}
+}
+
 p.show-date {
 	font-size: 1.3em;
 	font-weight: 400;
@@ -121,6 +150,20 @@ p.show-date {
  	}
   	@media screen and (min-width: $break-large) {
    	font-size: 1.7em;
+  	}
+}
+
+p.food {
+	font-size: 1.3em;
+	font-weight: 400;
+	color: #fdc20e;
+	text-align: center;
+	margin-top: 0;
+	@media screen and (max-width: $break-small) {
+    font-size: 1.2em;
+ 	}
+  	@media screen and (min-width: $break-large) {
+   	font-size: 1.3em;
   	}
 }
 
